--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
 h2 {
   color: var(--cor-primaria);
   margin-bottom: 20px;
+  font-size: 36px;
 }
 
 label {
@@ -68,7 +69,7 @@ button {
   color: var(--cor-branco);
   border: none;
   padding: 12px;
-  width: 100%;
+  width: 30%;
   margin-top: 20px;
   font-weight: bold;
   font-size: 15px;
